fix: prevent scrolling of collapsed

--- a/src/angular/sidebar/icon-sidebar/icon-sidebar.scss
+++ b/src/angular/sidebar/icon-sidebar/icon-sidebar.scss
@@ -117,6 +117,7 @@ sbb-header + .sbb-icon-sidebar-container {
 
 .sbb-icon-sidebar-links {
   margin-bottom: pxToRem(48);
+  overflow-x: hidden;
 }
 
 .sbb-icon-sidebar-item-icon {
@@ -198,6 +199,7 @@ sbb-header + .sbb-icon-sidebar-container {
     flex-direction: row;
     justify-content: space-between;
     margin-bottom: 0;
+    overflow-x: visible;
   }
 
   .sbb-icon-sidebar-item-label {
